--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
-.flexbox-container{
+.flexbox-container {
     display: flex;
 }
 
 .flexbox-item {
     width: 200px;
     margin: 10px;
-    border: 3px solid #333;
-    background-color: #dfdfdf;
+    border: 3px solid black;
+    background-color: white;
 }
 
 .flexbox-item-1 {
