--- a/grid/css/styles.css
+++ b/grid/css/styles.css
@@ -3,22 +3,26 @@
     grid-template-columns: 200px 250px;
     grid-auto-rows: minmax(150px, auto);
     grid-gap: 20px;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .grid-item-1 {
-    grid-column: 1 / -1; 
-    /* grid-column: span 2 */
+    /* align-self: start;
+    justify-self: center; */
+    /* grid-column: 1 / -1; g
+    grid-column: span 2 */
 }
 
 .grid-item-2 {
-    grid-column: span 2;
+    /* grid-column: span 2; */
 }
 
 .grid-item-3 {
-    grid-row-start: 2;
-    grid-row-end: 4;
+    /* grid-row-start: 2;
+    grid-row-end: 4; */
 }
 
 .grid-item-4{
-    grid-row: span 3
+    /* grid-row: span 3 */
 }
